# dgruft

./: .gitignore  Cargo.toml  README.md  plans.md
dbs/: dgruft-test.db
src/: backend.rs  cli.rs  config.rs  edit.rs  error.rs  frontend.rs  helpers.rs  input_validation.rs  lib.rs  main.rs  tui.rs  utils.rs
src/backend/: account.rs  aes256ciphertext.rs  aes256key.rs  credential.rs  credentials.rs  database.rs  encrypted.rs  encryption.rs  file.rs  file_data.rs  hash.rs  hashed.rs  hashing.rs  nonce.rs  password.rs  salt.rs  sql_schemas.rs  sql_statements.rs  sqlite.rs  vault.rs
src/backend/encryption/: encrypted.rs  traits.rs
src/backend/hashing/: hashed.rs  traits.rs
src/backend/vault/: database.rs  database_traits.rs  filesystem.rs  sql_schemas.rs  sql_statements.rs
src/cli/: arg_matcher.rs  arg_parser.rs  processes.rs
src/frontend/: app.rs  cli.rs  components.rs  config.rs  controls.rs  event.rs  logging.rs  tui.rs
src/tui/: app.rs  args.rs  components.rs  mode.rs  ti.rs
src/tui/components/: login.rs  logo.rs
tests/: common.rs  config.toml  database_tests.rs  database_with_accounts.rs
